# lingot_tuner_rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  meta.json  state.jsonl  tombstones.jsonl
.beads/: README.md  issues.export.jsonl  issues.jsonl  refresh-export.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
lingot/: Cargo.toml
lingot-tuner/: Cargo.toml
lingot-tuner/src/: core.rs  gauge.rs  gui.rs  lib.rs  main.rs  note.rs  tui.rs  web.rs
lingot-tuner/src/web/: index.html
lingot/src/: audio.rs  config.rs  fft.rs  filter.rs  lib.rs  scale.rs  signal.rs  window.rs
packaging/: lingot-tuner.desktop
scripts/: build-appimage.sh
src/: config.rs  defs.rs  fft.rs  lib.rs  main.rs  scale.rs  window.rs
