[package]
name = "lingot-tuner"
description = "A musical instrument tuner — Rust rewrite of lingot"
version.workspace = true
edition.workspace = true
license.workspace = true

# Binary crate: Layers 4-5 (core loop + GUI). Owns all application-level
# threading and the egui frontend. Depends on the `lingot` library.
[dependencies]
lingot = { path = "../lingot" }
crossbeam-channel = "0.5"
uom = "0.38.0"
eframe = { version = "0.34.3", optional = true }

[features]
# The GUI frontend (egui/eframe). Off by default so the CLI builds without
# pulling in the graphics stack.
gui = ["dep:eframe"]

# The graphical tuner. Only builds when the `gui` feature is enabled.
[[bin]]
name = "lingot-tuner"
path = "src/main.rs"
required-features = ["gui"]

# The command-line tuner. Always builds; no GUI dependencies.
[[bin]]
name = "lingot-tuner-cli"
path = "src/bin/lingot-tuner-cli.rs"
