[package]
name = "lingot-tuner"
description = "A musical instrument tuner — Rust rewrite of lingot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/theodoreOnzGit/lingot_tuner_rust"
readme = "../README.md"
keywords = ["tuner", "music", "audio", "dsp", "guitar"]
categories = ["multimedia::audio", "command-line-utilities"]

# Binary crate: Layers 4-5 (core loop + GUI). Owns all application-level
# threading and the egui frontend. Depends on the `lingot` library.
[dependencies]
# `version` is required so the crate is publishable; `path` still wins for
# local workspace builds.
lingot = { path = "../lingot", version = "0.2.0" }
crossbeam-channel = "0.5"
uom = "0.38.0"

# eframe pulls in winit/android-activity, which does not build for
# `aarch64-linux-android` (Termux). Everything except the GUI must stay
# Termux-compilable — see the hard rule in /CLAUDE.md — so the graphics stack is
# declared per-target and `feature = "gui"` resolves to nothing on Android.
[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.34.3", optional = true }

[features]
# The GUI tuner ships by default, so `cargo install lingot-tuner` gives the
# graphical binary. Build the CLI lean (no graphics stack) with
# `--no-default-features`.
default = ["gui"]
# The GUI frontend (egui/eframe).
gui = ["dep:eframe"]

# The graphical tuner. Only builds when the `gui` feature is enabled.
[[bin]]
name = "lingot-tuner"
path = "src/main.rs"
required-features = ["gui"]

# The command-line tuner. Always builds; no GUI dependencies.
[[bin]]
name = "lingot-tuner-cli"
path = "src/bin/lingot-tuner-cli.rs"
