[package]
name = "lingot-tuner"
description = "A musical instrument tuner — Rust rewrite of lingot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/theodoreOnzGit/lingot_tuner_rust"
readme = "../README.md"
keywords = ["tuner", "music", "audio", "dsp", "guitar"]
categories = ["multimedia::audio", "command-line-utilities"]

# Binary crate: Layers 4-5 (core loop + GUI). Owns all application-level
# threading and the egui frontend. Depends on the `lingot` library.
[dependencies]
# `version` is required so the crate is publishable; `path` still wins for
# local workspace builds.
lingot = { path = "../lingot", version = "0.2.2" }
crossbeam-channel = "0.5"
uom = "0.38.0"
# Terminal frontend. Pure Rust + termios, so unlike eframe this *does* build for
# aarch64-linux-android and is the only frontend usable under Termux.
ratatui = { version = "0.30", optional = true }
# WebSocket framing for the browser frontend. Pure Rust, and TLS is left off
# (`default-features = false` plus `handshake`), so nothing here links a system
# library or needs a C toolchain — it cross-compiles to aarch64-linux-android
# like everything else. The HTTP side is hand-rolled over std::net; one page and
# one socket route do not justify a framework or an async runtime.
tungstenite = { version = "0.30", default-features = false, features = [
  "handshake",
], optional = true }

# eframe pulls in winit/android-activity, which does not build for
# `aarch64-linux-android` (Termux). Everything except the GUI must stay
# Termux-compilable — see the hard rule in /CLAUDE.md — so the graphics stack is
# declared per-target and `feature = "gui"` resolves to nothing on Android.
[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.34.3", optional = true }

[features]
# The GUI tuner ships by default, so `cargo install lingot-tuner` gives the
# graphical binary. Build the CLI lean (no graphics stack) with
# `--no-default-features`.
default = ["gui", "tui", "web"]
# The GUI frontend (egui/eframe). Resolves to no dependency on Android.
gui = ["dep:eframe"]
# The terminal frontend (ratatui). Builds everywhere, including Termux.
tui = ["dep:ratatui"]
# The browser frontend (embedded HTTP + WebSocket server). Builds everywhere,
# including Termux, where it is the only frontend with real graphics.
web = ["dep:tungstenite"]

# The graphical tuner. Only builds when the `gui` feature is enabled.
[[bin]]
name = "lingot-tuner"
path = "src/main.rs"
required-features = ["gui"]

# The command-line tuner. Always builds; no frontend dependencies.
[[bin]]
name = "lingot-tuner-cli"
path = "src/bin/lingot-tuner-cli.rs"

# The terminal tuner — the usable frontend on Android/Termux.
[[bin]]
name = "lingot-tuner-tui"
path = "src/bin/lingot-tuner-tui.rs"
required-features = ["tui"]

# The browser tuner — serves the gauge to any browser, including the phone's own.
[[bin]]
name = "lingot-tuner-web"
path = "src/bin/lingot-tuner-web.rs"
required-features = ["web"]
