[package]
name = "lingot"
description = "Signal-processing and audio-capture library for a Rust rewrite of lingot"
version.workspace = true
edition.workspace = true
license.workspace = true

# Library crate: Layers 1-3 (config/scale, signal processing, audio capture).
# Must stay free of GUI and application-level threading — see /CLAUDE.md.
[dependencies]
cpal = "0.18.1"
num-complex = "0.4.6"
rustfft = "6.4.1"
thiserror = "2.0.18"
uom = "0.38.0"
